--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 potencial como boxeador. A história começa quando Ippo é salvo por Mamoru Takamura, um talentoso pugilista, de um grupo de valentões. Inspirado pelo 
 espírito corajoso de Takamura, Ippo decide entrar no mundo do boxe para superar seus medos e alcançar a autoconfiança. Ao longo da série, os espectadores
  testemunham o desenvolvimento de Ippo como lutador, suas amizades no ginásio Kamogawa e as intensas batalhas nos ringues, proporcionando uma narrativa
-  cativante que explora temas como perseverança, amizade e autodescoberta.
+  cativante que explora temas como perseverança, amizade e autodescoberta.</p>
 
- Com uma combinação envolvente de drama, comédia e ação, "Hajime no Ippo" se destaca por sua representação realista do mundo do boxe e pela construção 
+<p> Com uma combinação envolvente de drama, comédia e ação, "Hajime no Ippo" se destaca por sua representação realista do mundo do boxe e pela construção 
 profunda de personagens. O protagonista enfrenta desafios tanto dentro como fora do ringue, e a série oferece um olhar sincero sobre os altos e baixos 
 da vida de um aspirante a boxeador. A narrativa habilmente equilibra momentos emocionantes de luta com o desenvolvimento pessoal dos personagens, tornando 
 "Hajime no Ippo" uma obra-prima duradoura que continua a atrair fãs ao redor do mundo. </p>
