--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
+<!DOCTYPE hmtl>
+
+<html lang="pt-br">
+    <head>
+       <meta charset="UTF-8">
+       <title>Hajime-no-ippo</title>
+       <link rel="stylesheet" href="style.css"
+
+
+
+
+<body>
 <h1>Hajime no Ippo</h1>
+</body>
+
 
 <p> "Hajime no Ippo" é um emocionante mangá e anime que narra a jornada de Makunouchi Ippo, um jovem tímido e com baixa autoestima, que descobre seu 
 potencial como boxeador. A história começa quando Ippo é salvo por Mamoru Takamura, um talentoso pugilista, de um grupo de valentões. Inspirado pelo 
