--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
        <meta charset="UTF-8">
        <title>Hajime-no-ippo</title>
        <link rel="stylesheet" href="style.css"
-
+    </head>
 
 
 
 <body>
 <h1>Hajime no Ippo</h1>
-</body>
+
 
 
 <p> "Hajime no Ippo" é um emocionante mangá e anime que narra a jornada de Makunouchi Ippo, um jovem tímido e com baixa autoestima, que descobre seu 
@@ -24,3 +24,6 @@ espírito corajoso de Takamura, Ippo decide entrar no mundo do boxe para superar
 profunda de personagens. O protagonista enfrenta desafios tanto dentro como fora do ringue, e a série oferece um olhar sincero sobre os altos e baixos 
 da vida de um aspirante a boxeador. A narrativa habilmente equilibra momentos emocionantes de luta com o desenvolvimento pessoal dos personagens, tornando 
 "Hajime no Ippo" uma obra-prima duradoura que continua a atrair fãs ao redor do mundo. </p>
+</body>
+
+</html>
